--- a/src/app/configurations/pages/configuration-page/configuration-page.component.html
+++ b/src/app/configurations/pages/configuration-page/configuration-page.component.html
@@ -1,1 +1,1 @@
-<app-configurations></app-configurations>
+<app-configurations [configuration]="configuration" (create)="createConfiguration($event)" (edit)="editConfiguration($event)"></app-configurations>
