--- a/src/app/nomenclator-modules/state/components/state-form/state-form.component.html
+++ b/src/app/nomenclator-modules/state/components/state-form/state-form.component.html
@@ -5,8 +5,9 @@
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Nombre:</mat-label>
       <input matInput formControlName="nombre" />
-      <mat-error *ngIf="this.stateForm.controls['nombre'].invalid"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
-    </mat-form-field>
+      <mat-error *ngIf="nameStateControl.errors?.required"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
+      <mat-error *ngIf="nameStateControl.errors?.pattern"> {{ 'El nombre solo permite letras y espacios' }}  </mat-error>
+   </mat-form-field>
     <div class="mb-4">
       <ng-select appearance="outline" class="custom w-100" placeholder="País" [items]="country" bindLabel="nombre" bindValue="id" formControlName="pais">
       </ng-select>
@@ -19,7 +20,7 @@
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
     <button (click)="onSubmit(stateForm.value)" [disabled]="!stateForm.valid" mat-raised-button color="primary" class="button">
-      {{ data.state ? 'Editar' : 'Crear' }}
+      {{ data.state ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
 </div>
