--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -12,8 +12,9 @@
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Nombre:</mat-label>
               <input matInput formControlName="first_name" />
-              <mat-error *ngIf="this.userFormGroup.controls['first_name'].invalid"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
-            </mat-form-field>
+              <mat-error *ngIf="firstNameControl.errors?.required"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
+              <mat-error *ngIf="firstNameControl.errors?.pattern"> {{ 'El nombre solo permite letras y espacios' }}  </mat-error>
+             </mat-form-field>
           </div>
 
           <!-- Apellidos -->
@@ -21,8 +22,9 @@
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Apellidos:</mat-label>
               <input matInput formControlName="last_name" />
-              <mat-error *ngIf="this.userFormGroup.controls['last_name'].invalid"> {{ 'El apellido es' }} <strong>requerido</strong> </mat-error>
-            </mat-form-field>
+              <mat-error *ngIf="lastNameControl.errors?.required"> {{ 'El apellido es' }} <strong>requerido</strong> </mat-error>
+              <mat-error *ngIf="lastNameControl.errors?.pattern"> {{ 'El apelido solo permite letras y espacios' }}  </mat-error>
+             </mat-form-field>
           </div>
 
           <!-- Correo -->
@@ -89,12 +91,12 @@
           <!-- Categoria Científica -->
           <div class="col-lg-6 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Categoria Científica</mat-label>
+              <mat-label>Categoría Científica</mat-label>
               <mat-select #mySelectCC formControlName="categ_cientifica" multiple>
                 <button type="button" class="btn btn-primary adjust" (click)="mySelectCC.close()">Cerrar</button>
                 <mat-option *ngFor="let cat of catSciences" [value]="cat.id">{{ cat.descripcion }}</mat-option>
               </mat-select>
-              <mat-error *ngIf="this.userFormGroup.controls['categ_cientifica'].invalid">Seleccione una Categoria Científica</mat-error>
+              <mat-error *ngIf="this.userFormGroup.controls['categ_cientifica'].invalid">Seleccione una Categoría Científica</mat-error>
             </mat-form-field>
           </div>
 
@@ -324,9 +326,8 @@
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Nombre Madre:</mat-label>
                 <input matInput formControlName="nombre_madre" />
-                <mat-error *ngIf="personFormGroup.controls['nombre_madre'].errors?.required">
-                  {{ 'El Nombre de la  Madre es ' }} <strong>requerido</strong>
-                </mat-error>
+                <mat-error *ngIf="motherControl.errors?.required"> {{ 'El nombre de la Madre es' }} <strong>requerido</strong> </mat-error>
+                <mat-error *ngIf="motherControl.errors?.pattern"> {{ 'El nombre de la Madre solo permite letras y espacios' }}  </mat-error>
               </mat-form-field>
             </div>
 
@@ -335,9 +336,8 @@
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Nombre del Padre:</mat-label>
                 <input matInput formControlName="nombre_padre" />
-                <mat-error *ngIf="personFormGroup.controls['nombre_padre'].errors?.required">
-                  {{ 'El Nombre del Padre es ' }} <strong>requerido</strong>
-                </mat-error>
+                <mat-error *ngIf="fatherControl.errors?.required"> {{ 'El nombre del Padre es' }} <strong>requerido</strong> </mat-error>
+                <mat-error *ngIf="fatherControl.errors?.pattern"> {{ 'El nombre del Padre solo permite letras y espacios' }}  </mat-error>
               </mat-form-field>
             </div>
 
@@ -387,14 +387,14 @@
             <!-- telefono_movil -->
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
-                <mat-label>Teléfono movil:</mat-label>
+                <mat-label>Teléfono móvil:</mat-label>
                 <input matInput formControlName="telefono_movil" />
-                <mat-error *ngIf="personFormGroup.controls['telefono_movil'].invalid"> {{ 'El Teléfono movil es' }} <strong>requerido</strong> </mat-error>
+                <mat-error *ngIf="personFormGroup.controls['telefono_movil'].invalid"> {{ 'El Teléfono móvil es' }} <strong>requerido</strong> </mat-error>
               </mat-form-field>
             </div>
             <div>
               <div class="d-flex justify-content-between">
-                <button color="primary" mat-raised-button matStepperPrevious>Atras</button>
+                <button color="primary" mat-raised-button matStepperPrevious>Atrás</button>
                 <button color="primary" mat-raised-button matStepperNext>Siguiente</button>
               </div>
             </div>
@@ -498,7 +498,7 @@
               Télefono del Trabajo: <b>{{ personFormGroup.controls['telefono_trabajo'].value }}</b>
             </p>
             <p class="my-2" *ngIf="personFormGroup.controls['telefono_movil'].value">
-              Télefono Movil: <b>{{ personFormGroup.controls['telefono_movil'].value }}</b>
+              Télefono Móvil: <b>{{ personFormGroup.controls['telefono_movil'].value }}</b>
             </p>
           </div>
         </div>
@@ -511,7 +511,7 @@
       <div class="d-flex justify-content-between mt-3">
         <button color="primary" mat-raised-button matStepperPrevious>Atras</button>
         <button color="primary" mat-raised-button mat-button [disabled]="!userFormGroup.valid || !personFormGroup.valid" (click)="sendData()">
-          {{ user && person ? 'Editar' : 'Crear' }}
+          {{ user && person ? 'Aceptar' : 'Crear' }}
         </button>
       </div>
     </mat-step>
