--- a/src/app/security-module/role/components/role-form/role-form.component.html
+++ b/src/app/security-module/role/components/role-form/role-form.component.html
@@ -5,8 +5,9 @@
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Nombre:</mat-label>
       <input matInput formControlName="name" />
-      <mat-error *ngIf="this.roleForm.controls['name'].invalid"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
-    </mat-form-field>
+      <mat-error *ngIf="nameRoleControl.errors?.required"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
+      <mat-error *ngIf="nameRoleControl.errors?.pattern"> {{ 'El nombre solo permite letras y espacios' }}  </mat-error>
+   </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Permisos</mat-label>
       <mat-select #mySelect *ngIf="permissions" formControlName="permissions" multiple>
@@ -20,7 +21,7 @@
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
     <button (click)="onSubmit(roleForm.value)" [disabled]="!roleForm.valid" mat-raised-button color="primary" class="button">
-      {{ data.role ? 'Editar' : 'Crear' }}
+      {{ data.role ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
 </div>
