--- a/src/app/configurations/components/configurations/configurations.component.html
+++ b/src/app/configurations/components/configurations/configurations.component.html
@@ -1,6 +1,6 @@
 <div class="container my-3" *ngIf="configurationForm && imagesForm">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Configuracion</h4>
+    <h4>Configuración</h4>
     <button [disabled]="configurationForm.invalid" (click)="sendData()" mat-raised-button color="primary" class="button">Actualizar</button>
   </div>
   <div class="mt-5 mb-5">
