Revisión ortográfica (cambio de idioma) en Layout

--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -102,7 +102,7 @@
               </div>
             </mat-menu> -->
 
-            <button class="mx-1" mat-icon-button matTooltip="{{ 'User options' }}">
+            <button class="mx-1" mat-icon-button matTooltip="{{ 'Opciones de Usuario' }}">
               <mat-icon class="cursor-pointer" aria-label="Side nav toggle icon" [matMenuTriggerFor]="menu">more_vert </mat-icon>
             </button>
             <mat-menu #menu="matMenu" class="mymegamenu">
