--- a/src/app/security-module/trace-actions/pages/trace-actions-page/trace-actions-page.component.html
+++ b/src/app/security-module/trace-actions/pages/trace-actions-page/trace-actions-page.component.html
@@ -7,6 +7,7 @@
     [displayedColumns]="displayedColumns"
     [columnsName]="columnsName"
     [paginationSize]="paginationSize"
+    [rowActionButtons]="rowActionButtons"
     [filters]="tableFilters"
     (changePage)="onChangePage($event)"
     (changeFilter)="onChangeFilter($event)"
