--- a/src/app/backend/appBackoffice/profile/profile/profile.component.html
+++ b/src/app/backend/appBackoffice/profile/profile/profile.component.html
@@ -3,23 +3,19 @@
     <mat-tab>
       <ng-template mat-tab-label>
         <mat-icon>account_circle</mat-icon>
-        <span class="mat-body-2 uppercase ml-2">
-          Mi perfil
-        </span>
+        <span class="mat-body-2 uppercase ml-2"> Mi perfil </span>
       </ng-template>
       <ng-template matTabContent>
-        <app-editar-perfil></app-editar-perfil>
+        <app-editar-perfil *ngIf="user" [user]="user" (save)="updateUser($event)"></app-editar-perfil>
       </ng-template>
     </mat-tab>
     <mat-tab>
       <ng-template mat-tab-label>
         <mat-icon>lock_open</mat-icon>
-        <span class="mat-body-2 uppercase ml-2">
-          Cambiar contraseña
-        </span>
+        <span class="mat-body-2 uppercase ml-2"> Cambiar contraseña </span>
       </ng-template>
       <ng-template matTabContent>
-        <app-change-pass></app-change-pass>
+        <app-change-pass *ngIf="user" [userId]="user?.id" (changePassword)="changePassword($event)"></app-change-pass>
       </ng-template>
     </mat-tab>
   </mat-tab-group>
