Cambio de logo en el Login

--- a/src/app/authentication/login/login.component.scss
+++ b/src/app/authentication/login/login.component.scss
@@ -48,7 +48,7 @@ $havanatur-color: #0d47a1;
 
       border-radius: 50%;
       border: solid 2.2px #bbb;
-      background-image: url('../../../assets/images/users/profile2.png');
+      background-image: url('../../../assets/images/users/logo-snis.jpg');
       background-position: center;
       background-size: cover;
     }
