--- a/src/assets/scss/theme/_variables.scss
+++ b/src/assets/scss/theme/_variables.scss
@@ -1,25 +1,56 @@
 /// IMPORTAR AQUI MATERIAL Y CONFIGURARLO
 // ---------------Material Themin -----------------///
-@import "~@angular/material/theming";
+@import '~@angular/material/theming';
 @include mat-core();
-$custom-typography: mat-typography-config($font-family: "Poppins"
+$custom-typography: mat-typography-config(
+  $font-family: 'Poppins',
 );
 // Override the typography in the core CSS.
 @include mat-core($custom-typography);
 
-$my-primary-color: $mat-indigo;
+// $my-primary-color: $mat-indigo;
+$my-primary-color: (
+  50: rgb(224, 247, 252),
+  100: rgb(187, 227, 235),
+  200: rgb(138, 202, 214),
+  300: rgb(125, 197, 211),
+  400: rgb(94, 183, 201),
+  500: rgb(89, 178, 196),
+  600: rgb(63, 168, 189),
+  700: rgb(54, 162, 184),
+  800: rgb(39, 154, 177),
+  900: rgb(23, 128, 149),
+  contrast: (
+    50: $white-87-opacity,
+    100: $white-87-opacity,
+    200: $white-87-opacity,
+    300: $white-87-opacity,
+    400: $white-87-opacity,
+    500: $white-87-opacity,
+    600: $white-87-opacity,
+    700: $white-87-opacity,
+    800: $white-87-opacity,
+    900: $white-87-opacity,
+    A100: $white-87-opacity,
+    A200: $white-87-opacity,
+    A400: $white-87-opacity,
+    A700: $white-87-opacity,
+  ),
+);
 
-$my-accent-color: (50: #f1f8e5,
+$my-accent-color: (
+  50: #f1f8e5,
   100: #dbedbf,
   200: #c3e095,
   300: #aad469,
   400: #95cb44,
   500: #82c213,
-  600:#72b207,
+  600: #72b207,
   700: #5c9e00,
   800: #468b00,
   900: #156900,
-  contrast: (50: $white-87-opacity,
+  contrast: (
+    50: $white-87-opacity,
     100: $white-87-opacity,
     200: $white-87-opacity,
     300: $white-87-opacity,
@@ -96,51 +127,50 @@ $background: #fafafa;
 $gray-lighter: #f6f6f6;
 $footer-background: #f7f7f7;
 
-
 //////////////////////////////////////
 
 /*Material Colors*/
-$grey-50: #FAFAFA;
-$grey-100: #F5F5F5;
-$grey-200: #EEEEEE;
-$grey-300: #E0E0E0;
-$grey-400: #BDBDBD;
-$grey-500: #9E9E9E;
+$grey-50: #fafafa;
+$grey-100: #f5f5f5;
+$grey-200: #eeeeee;
+$grey-300: #e0e0e0;
+$grey-400: #bdbdbd;
+$grey-500: #9e9e9e;
 $grey-600: #757575;
 $grey-700: #616161;
 $grey-800: #424242;
 $grey-900: #212121;
 
-$red-100: #FFEBEE;
-$red-200: #FFCDD2;
-$red-300: #E57373;
-$red-400: #EF5350;
-$red-500: #F44336;
-$red-600: #E53935;
-$red-700: #D32F2F;
-$red-800: #C62828;
-$red-900: #B71C1C;
+$red-100: #ffebee;
+$red-200: #ffcdd2;
+$red-300: #e57373;
+$red-400: #ef5350;
+$red-500: #f44336;
+$red-600: #e53935;
+$red-700: #d32f2f;
+$red-800: #c62828;
+$red-900: #b71c1c;
 
-$amber-100: #FFECB3;
-$amber-200: #FFE082;
-$amber-300: #FFD54F;
-$amber-400: #FFCA28;
-$amber-500: #FFC107;
-$amber-600: #FFB300;
-$amber-700: #FFA000;
-$amber-800: #FF8F00;
-$amber-900: #FF6F00;
+$amber-100: #ffecb3;
+$amber-200: #ffe082;
+$amber-300: #ffd54f;
+$amber-400: #ffca28;
+$amber-500: #ffc107;
+$amber-600: #ffb300;
+$amber-700: #ffa000;
+$amber-800: #ff8f00;
+$amber-900: #ff6f00;
 
 $teal-50: #e0f2f2;
-$teal-100: #B2DFDB;
-$teal-200: #80CBC4;
-$teal-300: #4DB6AC;
-$teal-400: #26A69A;
+$teal-100: #b2dfdb;
+$teal-200: #80cbc4;
+$teal-300: #4db6ac;
+$teal-400: #26a69a;
 $teal-500: #009688;
-$teal-600: #00897B;
-$teal-700: #00796B;
-$teal-800: #00695C;
-$teal-900: #004D40;
+$teal-600: #00897b;
+$teal-700: #00796b;
+$teal-800: #00695c;
+$teal-900: #004d40;
 
 $blue-50: #e3f2fd;
 $blue-100: #bbdefb;
@@ -160,7 +190,7 @@ $blue-900: #0d47a1;
 }
 
 .color-accent-theme {
-  color: #82C213 !important;
+  color: #82c213 !important;
 }
 
 .background-color-white {
