quitar recordar contrasenna(por el momento)

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -71,7 +71,7 @@
               INICIAR SESIÓN
             </button>
 
-            <a class="mat-body-2 link mt-3" [routerLink]="['email-forgot']">Olvidé mi contraseña</a>
+            <!--<a class="mat-body-2 link mt-3" [routerLink]="['email-forgot']">Olvidé mi contraseña</a>-->
 
             <!-- <mat-spinner diameter="60" color="primary" *ngIf="this.inLoading"></mat-spinner> -->
           </div>
