--- a/src/app/security-module/user/pages/user-item/user-item.component.html
+++ b/src/app/security-module/user/pages/user-item/user-item.component.html
@@ -11,6 +11,7 @@
   [nationalities]="nationalities"
   [professions]="professions"
   [genders]="genders"
+  [bloodTypes]="bloodTypes"
   (create)="onCreate($event)"
   (edit)="onEdit($event)"
 >
