--- a/src/app/security-module/user/pages/user-details/user-details.component.html
+++ b/src/app/security-module/user/pages/user-details/user-details.component.html
@@ -3,12 +3,9 @@
     <mat-card-header>
       <div class="d-flex justify-content-between align-items-center w-100">
         <div class="d-flex">
-          <mat-icon
-            [class]="user.is_online ? 'is-online' : 'is-not-online'"
-            title="Está online?"
-          >
-            fiber_manual_record
-          </mat-icon>
+          <div [class]="user.is_online ? 'is-online' : 'is-not-online'">
+            <mat-icon >fiber_manual_record</mat-icon>
+          </div>
           <img class="img-detail-avatar mx-3" [src]="user.persona?.foto" />
           <div>
             <h3 class="title">{{ user.first_name }} {{ user.last_name }}</h3>
@@ -46,6 +43,9 @@
             </p>
             <p class="my-1" *ngIf="user.persona?.sexo?.descripcion">
               Sexo: <b>{{ user.persona.sexo.descripcion }}</b>
+            </p>
+            <p class="my-1" *ngIf="user.persona?.sexo?.descripcion">
+              Grupo Sanguíneo: <b>{{ user.persona.grupo_sanguineo.descripcion }}</b>
             </p>
             <p class="my-1" *ngIf="user.persona?.nacionalidad?.descripcion">
               Nacionalidad: <b>{{ user.persona.nacionalidad.descripcion }}</b>
