--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -108,7 +108,7 @@
                 <button type="button" class="btn btn-primary adjust" (click)="mySelectE.close()">Cerrar</button>
                 <mat-option *ngFor="let specialty of specialties" [value]="specialty.id">{{ specialty.descripcion }}</mat-option>
               </mat-select>
-              <mat-error *ngIf="this.userFormGroup.controls['categ_cientifica'].invalid">Seleccione una especialidad</mat-error>
+              <mat-error *ngIf="this.userFormGroup.controls['categ_cientifica'].errors?.required">Seleccione una especialidad</mat-error>
             </mat-form-field>
           </div>
         </div>
@@ -252,18 +252,19 @@
               <mat-error *ngIf="personFormGroup.controls['sexo'].errors?.required">{{ 'Seleccione un sexo' }}</mat-error>
             </mat-form-field>
           </div>
+
+             <!-- grupo sanguineo -->
           <div class="col-lg-3 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Grupo Sanguíneo:</mat-label>
               <mat-select formControlName="grupo_sanguineo">
                 <mat-option *ngFor="let bloodType of bloodTypes" [value]="bloodType.id">{{ bloodType.descripcion }}</mat-option>
+              <mat-error *ngIf="personFormGroup.controls['grupo_sanguineo'].errors?.required">{{ 'Seleccione un sexo' }}</mat-error>
               </mat-select>
             </mat-form-field>
           </div>
         </div>
-          <!-- grupo sanguineo -->
-
-
+       
         <div class="card p-3">
           <h5>Dirección y Contacto</h5>
           <div class="row" *ngIf="personFormGroup" [formGroup]="personFormGroup">
@@ -365,7 +366,7 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono de Emergencia:</mat-label>
-                <input matInput formControlName="telefono_emergencia" />
+                <input matInput formControlName="telefono_emergencia" value="+(240)" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_emergencia'].errors?.required">
                   {{ 'El Teléfono de Emergencia es ' }} <strong>requerido</strong>
                 </mat-error>
@@ -379,7 +380,7 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono de casa:</mat-label>
-                <input matInput formControlName="telefono_casa" />
+                <input matInput formControlName="telefono_casa" value="+(240)" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_casa'].errors?.required">
                   {{ 'El Teléfono de casa es ' }} <strong>requerido</strong>
                 </mat-error>
@@ -392,7 +393,7 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono del Trabajo:</mat-label>
-                <input matInput formControlName="telefono_trabajo" />
+                <input matInput formControlName="telefono_trabajo" value="+(240)" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_trabajo'].errors?.required">
                   {{ 'El Teléfono del trabajo es' }} <strong>requerido</strong>
                 </mat-error>
@@ -406,7 +407,7 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono móvil:</mat-label>
-                <input matInput formControlName="telefono_movil" />
+                <input matInput formControlName="telefono_movil" value="+(240)" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_movil'].errors?.required">
                   {{ 'El Teléfono móvil es' }} <strong>requerido</strong>
                 </mat-error>
