--- a/src/app/backend/appBackoffice/profile/editar-perfil/editar-perfil.component.html
+++ b/src/app/backend/appBackoffice/profile/editar-perfil/editar-perfil.component.html
@@ -83,5 +83,5 @@
       </mat-error>
     </mat-form-field>
   </div>
-  <button (click)="onUpdateProfile()" mat-flat-button color="primary">GUARDAR</button>
+  <button mat-raised-button mat-button color="primary" [disabled]="!form.valid" (click)="onUpdateProfile()" >GUARDAR</button>
 </form>
