--- a/src/app/structure-modules/health-unit/components/health-unit-form/health-unit-form.component.html
+++ b/src/app/structure-modules/health-unit/components/health-unit-form/health-unit-form.component.html
@@ -21,12 +21,12 @@
 
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Teléfono fijo:</mat-label>
-      <input matInput formControlName="telefono_fijo" value="+(240)" matTooltip="+(240)###-######" />
+      <input matInput formControlName="telefono_fijo"  matTooltip="+(240)###-######" />
       <mat-error *ngIf="this.healthUnitForm.controls['telefono_fijo'].invalid"> {{ 'Incorrecto formato de teléfono "+(240)###-######"' }}</mat-error>
     </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Teléfono Móvil:</mat-label>
-      <input matInput formControlName="telefono_movil" value="+(240)" matTooltip="+(240)###-######" />
+      <input matInput formControlName="telefono_movil"  matTooltip="+(240)###-######" />
       <mat-error *ngIf="this.healthUnitForm.controls['telefono_movil'].invalid"> {{ 'Incorrecto formato de teléfono "+(240)###-######"' }} </mat-error>
     </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
