--- a/src/app/clinical-services/pages/dynamic-table-item-page/dynamic-table-item-page.component.html
+++ b/src/app/clinical-services/pages/dynamic-table-item-page/dynamic-table-item-page.component.html
@@ -1,1 +1,8 @@
-<app-dynamic-table-form [metaTableName]="metaTableName"> </app-dynamic-table-form>
+<app-dynamic-table-form
+  [metaTableFields]="metaTableFields"
+  [metaTableName]="metaTableName"
+  [metaFields]="metaFields"
+  (create)="onCreate($event)"
+  (edit)="onEdit($event)"
+>
+</app-dynamic-table-form>
