--- a/src/app/clinical-services/pages/dynamic-table-page/dynamic-table-page.component.html
+++ b/src/app/clinical-services/pages/dynamic-table-page/dynamic-table-page.component.html
@@ -1,7 +1,9 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Tablas</h4>
-    <button (click)="goToForm()" mat-raised-button color="primary" class="button">Crear Tabla</button>
+    <a [routerLink]="['/clinical-services/meta-table/create']" routerLinkActive="router-link-active" mat-raised-button color="primary" class="button"
+      >Crear Tabla</a
+    >
   </div>
   <app-custom-table
     *ngIf="metaTableNames"
